--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Jordan</h2>
+                <h2>Quds</h2>
             </div>
         </div>
     </div>
