--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
                 <h2>Barcelona</h2>
             </div>
 
-            <div class="destination" id="barcelona">
+            <div class="destination" id="Jordan">
+                <h2>Jordan</h2>
+            </div>
+
+            <div class="destination" id="Quds">
                 <h2>Quds</h2>
+            </div>
+
+            <div class="destination" id="Riyadh">
+                <h2>Riyadh</h2>
             </div>
         </div>
     </div>
